...
        android:layout_marginStart="8dp"
        android:importantForAccessibility="no"
        android:layout_centerHorizontal="true"
        android:text="@string/new_task"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_task_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_projet_24"
        android:layout_below="@+id/create_task_text_view_title"
        style="?attr/textAppearanceHeadline4">

        <EditText
            android:id="@+id/txt_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            tools:ignore="UnusedAttribute" />
...
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_subject_24"
        android:layout_below="@+id/txt_task_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/project_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/project"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:minWidth="72dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/create_task_button_ok"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:minWidth="64dp"
...
